<resources>
    <string name="app_name">Заметки</string>
    <string name="my_notes">Мои заметки</string>
    <string name="add_note">Добавить заметку</string>
    <string name="new_note">Новая заметка</string>
    <string name="edit_note">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="title_hint">Заголовок</string>
    <string name="content_hint">Начните писать здесь...</string>
    <string name="no_notes">Нет заметок</string>
    <string name="no_notes_desc">Нажмите + чтобы создать первую заметку</string>
    <string name="favorite">Избранное</string>
    <string name="all_notes">Все заметки</string>
    <string name="search_hint">Поиск заметок...</string>
</resources>